js/js.translator/testData/incremental/invalidation/interfaceWithJsExport/lib1/lib.2.kt
interface Foo {
    fun foo(): String = "OK"
}